[package]
name = "rustytele"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
byteorder = "1.5.0"
cxx = "1.0.128"
cxx-qt = "0.6.1"
cxx-qt-lib = "0.6.1"
derivative = "2.2.0"
lazy_static = "1.5.0"
md5 = "0.7.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
pbkdf2 = "0.12.2"
rusqlite = "0.32.1"
sha1 = "0.10.6"
sha2 = "0.10.8"

[build-dependencies]
cxx-qt-build = "0.6.1"
